# freestyle

./: .gitignore  README.md  example.toml  freestyle.py  pyproject.toml
playdesk/: index.html  package-lock.json  package.json
playdesk/src/: App.css  App.tsx  index.css
playdesk/src/hooks/: useFileDrop.ts  useFreestyleApi.ts
playdesk/src/lib/: constants.ts  toml-graph.ts
playdesk/src/nodes/: AttachmentDropZone.tsx  LensNode.tsx  SinkNode.tsx  SourceNode.tsx
playdesk/src/panels/: NodePalette.tsx  OutputPanel.tsx  TomlPanel.tsx
playdesk/src/store/: pipeline-store.ts
playdesk/src/toolbar/: Toolbar.tsx
playdesk/src/types/: pipeline.ts
server/: serve.py
